@@ -29,7 +29,7 @@ public class EnemySprite extends TimedConstraintCommand {
     }
 
     @Override
-    public void prepare() throws Exception {
+    public void prepare() {
         registerRequiredPermission(Permission.MESSAGE_ATTACH_FILES);
     }
 
@@ -59,7 +59,7 @@ public class EnemySprite extends TimedConstraintCommand {
             } else if(enemies.size() == 1) {
                 int param = checkParameter(loader.getContent());
 
-                EntityHandler.getEnemySprite(enemies.get(0), ch, loader.getMessage(), getModeFromParam(param), lang);
+                EntityHandler.getEnemySprite(enemies.getFirst(), ch, loader.getMessage(), getModeFromParam(param), lang);
             } else {
                 StringBuilder sb = new StringBuilder(LangID.getStringByID("formst_several", lang).replace("_", getSearchKeyword(loader.getContent())));
 
