@@ -40,7 +40,7 @@ public class EnemyStatAnalyzer extends ConstraintCommand {
     }
 
     @Override
-    public void prepare() throws Exception {
+    public void prepare() {
         registerRequiredPermission(Permission.MESSAGE_MANAGE, Permission.MESSAGE_ATTACH_FILES);
     }
 
@@ -390,7 +390,7 @@ public class EnemyStatAnalyzer extends ConstraintCommand {
                 continue;
             }
 
-            String[] ind = arrays.get(0).split(",");
+            String[] ind = arrays.getFirst().split(",");
             String[] isTime = arrays.get(1).split(",");
 
             if(isTime.length != ind.length) {
@@ -436,7 +436,7 @@ public class EnemyStatAnalyzer extends ConstraintCommand {
                 res.append("W : Invalid index array data at proc cell No.")
                         .append(i + 1)
                         .append(" -> ")
-                        .append(arrays.get(0))
+                        .append(arrays.getFirst())
                         .append("\n");
 
                 i++;
@@ -456,7 +456,7 @@ public class EnemyStatAnalyzer extends ConstraintCommand {
                 continue;
             }
 
-            String[] rest = group.replace("["+arrays.get(0)+"]", "").split("\\["+arrays.get(1)+"]");
+            String[] rest = group.replace("["+arrays.getFirst()+"]", "").split("\\["+arrays.get(1)+"]");
 
             if(rest.length != 2) {
                 res.append("W : Insufficient data is provided at proc cell No.")
@@ -662,7 +662,7 @@ public class EnemyStatAnalyzer extends ConstraintCommand {
                 continue;
             }
 
-            String[] ind = arrays.get(0).split(",");
+            String[] ind = arrays.getFirst().split(",");
 
             int[] indexes = new int[ind.length];
 
@@ -681,7 +681,7 @@ public class EnemyStatAnalyzer extends ConstraintCommand {
                 res.append("W : Invalid index array data at cell No.")
                         .append(i + 1)
                         .append(" -> ")
-                        .append(arrays.get(0))
+                        .append(arrays.getFirst())
                         .append("\n");
 
                 i++;
@@ -689,7 +689,7 @@ public class EnemyStatAnalyzer extends ConstraintCommand {
                 continue;
             }
 
-            String[] rest = group.replaceAll("\\["+arrays.get(0)+"]( +?)?,", "").split(",");
+            String[] rest = group.replaceAll("\\["+arrays.getFirst()+"]( +?)?,", "").split(",");
 
             if(rest.length != 4) {
                 res.append("W : Insufficient data is provided at cell No.")
