@@ -19,7 +19,7 @@ public class PrintGachaEvent extends ConstraintCommand {
 
 
     @Override
-    public void doSomething(@NotNull CommandLoader loader) throws Exception {
+    public void doSomething(@NotNull CommandLoader loader) {
         MessageChannel ch = loader.getChannel();
 
         boolean now = isNow(loader.getContent());
@@ -72,7 +72,7 @@ public class PrintGachaEvent extends ConstraintCommand {
             builder.append("```ansi\n");
 
             while(builder.length() < 1800 && !result.isEmpty()) {
-                String line = result.get(0);
+                String line = result.getFirst();
 
                 if(line.length() > 1950) {
                     result.remove(0);
