@@ -42,7 +42,7 @@ public class StatAnalyzer extends ConstraintCommand {
     }
 
     @Override
-    public void prepare() throws Exception {
+    public void prepare() {
         registerRequiredPermission(Permission.MESSAGE_MANAGE, Permission.MESSAGE_ATTACH_FILES);
     }
 
@@ -451,7 +451,7 @@ public class StatAnalyzer extends ConstraintCommand {
                 continue;
             }
 
-            String[] ind = arrays.get(0).split(",");
+            String[] ind = arrays.getFirst().split(",");
             String[] isTime = arrays.get(1).split(",");
 
             if(isTime.length != ind.length) {
@@ -497,7 +497,7 @@ public class StatAnalyzer extends ConstraintCommand {
                 res.append("W : Invalid index array data at proc cell No.")
                         .append(i + 1)
                         .append(" -> ")
-                        .append(arrays.get(0))
+                        .append(arrays.getFirst())
                         .append("\n");
 
                 i++;
@@ -517,7 +517,7 @@ public class StatAnalyzer extends ConstraintCommand {
                 continue;
             }
 
-            String[] rest = group.replace("["+arrays.get(0)+"]", "").split("\\["+arrays.get(1)+"]");
+            String[] rest = group.replace("["+arrays.getFirst()+"]", "").split("\\["+arrays.get(1)+"]");
 
             if(rest.length != 2) {
                 res.append("W : Insufficient data is provided at proc cell No.")
@@ -723,7 +723,7 @@ public class StatAnalyzer extends ConstraintCommand {
                 continue;
             }
 
-            String[] ind = arrays.get(0).split(",");
+            String[] ind = arrays.getFirst().split(",");
 
             int[] indexes = new int[ind.length];
 
@@ -742,7 +742,7 @@ public class StatAnalyzer extends ConstraintCommand {
                 res.append("W : Invalid index array data at cell No.")
                         .append(i + 1)
                         .append(" -> ")
-                        .append(arrays.get(0))
+                        .append(arrays.getFirst())
                         .append("\n");
 
                 i++;
@@ -750,7 +750,7 @@ public class StatAnalyzer extends ConstraintCommand {
                 continue;
             }
 
-            String[] rest = group.replaceAll("\\["+arrays.get(0)+"]( +?)?,", "").split(",");
+            String[] rest = group.replaceAll("\\["+arrays.getFirst()+"]( +?)?,", "").split(",");
 
             if(rest.length != 4) {
                 res.append("W : Insufficient data is provided at cell No.")
