@@ -77,7 +77,7 @@ public class StageReactionSlashMessageHolder extends MessageHolder {
                 if (cs == null) {
                     ArrayList<CastleList> lists = new ArrayList<>(CastleList.defset());
 
-                    cs = lists.get(0).get(0);
+                    cs = lists.getFirst().get(0);
                 }
 
                 new Castle(ConstraintCommand.ROLE.MEMBER, lang, holder, cs).execute(event);
